added new activity and classes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
             android:textStyle="bold"
             android:text=""
             android:textSize="20dp"
-            android:id="@+id/valutas"/>
+            android:id="@+id/valuta"/>
     </ScrollView>
 
     <TextView
