added new resourses, added new menu, added spinner for valuta

--- a/app/src/main/res/layout/edit_pouch_activity.xml
+++ b/app/src/main/res/layout/edit_pouch_activity.xml
@@ -26,13 +26,16 @@
         android:id="@+id/spinner"
         android:layout_below="@+id/textView"
         android:layout_toRightOf="@+id/editText"
-        android:layout_toEndOf="@+id/editText" />
+        android:layout_toEndOf="@+id/editText"
+        android:entries="@array/array_valuta"
+        />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Button"
-        android:id="@+id/button"
+        android:id="@+id/add_rm_button"
+        android:onClick="add_rm_button_Click"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
