--- a/app/src/main/res/layout/edit_pouch_activity.xml
+++ b/app/src/main/res/layout/edit_pouch_activity.xml
@@ -66,7 +66,8 @@
         android:layout_alignEnd="@+id/spinnerValuta"
         android:layout_toEndOf="@+id/editValuta"
         android:layout_toRightOf="@+id/editValuta"
-        android:id="@+id/deletePouchButton" />
+        android:id="@+id/deletePouchButton"
+        android:onClick="deletePouchButton_Click"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -130,11 +131,28 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" >
 
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textPouchs"/>
 
+
+     <!--   <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/addPouchButton"
+            android:id="@+id/listPouchs"
+            />-->
+
+
     </ScrollView>
+    <!--
+   <ListView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_below="@+id/addPouchButton"
+       android:entries="@array/array_valuta"/>
+      -->
 
 </RelativeLayout>
