--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,4 +12,9 @@
         android:orderInCategory="100"
         android:title="@string/pouch_settings"
         />
+    <item
+        android:id="@+id/repair_saving"
+        android:orderInCategory="100"
+        android:title="Очистить сохранения"
+        />
 </menu>
