--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,20 +59,25 @@
         android:layout_alignParentStart="true" />
 
     <Button
+        style="@style/buttonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Записать"
         android:id="@+id/saveButton"
         android:layout_below="@+id/scrollView"
-        android:layout_toRightOf="@+id/newTextView"
-        android:layout_toEndOf="@+id/newTextView" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+         />
     <Button
+        style="@style/buttonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/saveButton"
         android:text="Загрузить"
         android:id="@+id/loadButton"
         android:onClick="loadButton_Click"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         />
 
 
