--- a/app/src/main/res/layout/edit_pouch_activity.xml
+++ b/app/src/main/res/layout/edit_pouch_activity.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@drawable/wood">
+    android:background="@drawable/wood"
+    >
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,6 +25,7 @@
         />
 
     <Spinner
+        style="@style/textStyleSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/spinnerValuta"
@@ -37,6 +39,7 @@
         />
 
     <Button
+        style="@style/buttonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/addPouch"
@@ -46,9 +49,11 @@
         android:layout_alignLeft="@+id/addDeleteButton"
         android:layout_alignStart="@+id/addDeleteButton"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        />
 
     <Button
+        style="@style/buttonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/amendPouch"
@@ -60,6 +65,7 @@
         android:layout_toLeftOf="@+id/deletePouchButton" />
 
     <Button
+        style="@style/buttonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/deletePouch"
@@ -84,6 +90,7 @@
         />
 
     <Button
+        style="@style/buttonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/addDelete"
@@ -96,6 +103,7 @@
         android:layout_alignParentStart="true" />
 
     <Spinner
+        style="@style/textStyleSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/spinnerConvertableValuta"
