--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,35 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <style name="MainTheme" parent="AppTheme">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:cacheColorHint">@color/black</item>
+
+
+    </style>
+
+    <style name="buttonStyle" parent="MainTheme" >
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">17sp</item>
+    </style>
+
+    <style name="buttonStyle.Bord">
+        <item name="android:background">#a73030</item>
+        <item name="android:textColor">#e9b4b4</item>
+    </style>
+
+    <style name="textStyleSpinner"  >
+        <item name="android:textSize">40sp</item>
+        <item name="android:textColor">#111</item>
+    </style>
+
+    <style name="textStyle">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/black</item>
+
+    </style>
+
 </resources>
