--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:cacheColorHint">@color/black</item>
+        <item name="android:textStyle">bold</item>
 
 
     </style>
