added new layouts,  DFD-dialgams; added class-controller

--- a/app/src/main/res/layout/edit_pouch_activity.xml
+++ b/app/src/main/res/layout/edit_pouch_activity.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/pouch"
+        android:text="@string/wallet"
         android:id="@+id/titleTextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -42,7 +42,7 @@
         style="@style/buttonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/addPouch"
+        android:text="@string/addWallet"
         android:id="@+id/addPouchButton"
         android:onClick="addPouchButton_Click"
         android:layout_below="@+id/addDeleteButton"
@@ -56,7 +56,7 @@
         style="@style/buttonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/amendPouch"
+        android:text="@string/amendWallet"
         android:id="@+id/amendPouchButton"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
@@ -68,7 +68,7 @@
         style="@style/buttonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/deletePouch"
+        android:text="@string/deleteWallet"
         android:layout_alignTop="@+id/amendPouchButton"
         android:layout_alignRight="@+id/spinnerValuta"
         android:layout_alignEnd="@+id/spinnerValuta"
