--- a/app/src/main/res/layout/edit_article_activity.xml
+++ b/app/src/main/res/layout/edit_article_activity.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wood">
+    android:background="@drawable/fone_gradient"
+    >
 
     <EditText
         android:layout_width="match_parent"
