--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="red">#e10c0c</color>
     <color name="white">#ffffff</color>
     <color name="bord">#894d4d</color>
-
+    <color name="sky">#aff1e6</color>
+    <color name="darksky">#62c6b2</color>
+    <color name="orange">#cade7724</color>
+    <color name="textColor">#1b1301</color>
 </resources>
