--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/orange</item>
+        <item name="colorPrimaryDark">@color/orange</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
@@ -23,6 +23,7 @@
     <style name="buttonStyle" parent="MainTheme" >
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">17sp</item>
+        <item name="android:background">@drawable/gradient_button</item>
     </style>
 
     <style name="buttonStyle.Bord">
