--- a/app/src/main/res/layout/control_budget_activity.xml
+++ b/app/src/main/res/layout/control_budget_activity.xml
@@ -38,14 +38,14 @@
         android:layout_alignParentStart="true" />
 
     <Spinner
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/spinnerCategory"
         android:layout_below="@+id/editDate"
         android:layout_centerHorizontal="true" />
 
     <Spinner
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/spinnerSubCategory"
         android:layout_below="@+id/spinnerCategory"
