--- a/app/src/main/res/layout/edit_wallet_activity.xml
+++ b/app/src/main/res/layout/edit_wallet_activity.xml
@@ -104,7 +104,7 @@
 
     <Spinner
         style="@style/textStyleSpinner"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/spinnerConvertableValuta"
         android:layout_below="@+id/editValuta"
