--- a/app/src/main/res/layout/control_budget_activity.xml
+++ b/app/src/main/res/layout/control_budget_activity.xml
@@ -17,7 +17,7 @@
         android:inputType="numberDecimal"
         android:hint="@string/sum"
         android:ems="10"
-        android:id="@+id/editFixing"
+        android:id="@+id/editSum"
         android:layout_below="@+id/BalanceView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -31,7 +31,7 @@
         android:hint="@string/date"
         android:ems="10"
         android:id="@+id/editDate"
-        android:layout_below="@+id/editFixing"
+        android:layout_below="@+id/editSum"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
