added fixing history

--- a/app/src/main/res/layout/control_budget_activity.xml
+++ b/app/src/main/res/layout/control_budget_activity.xml
@@ -36,15 +36,14 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <TextView
+    <DatePicker
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/date"
-        android:textSize="30dp"
         android:id="@+id/editDate"
         android:layout_below="@+id/editSum"
+        android:calendarViewShown="false"
         android:layout_centerHorizontal="true"
-        android:onClick="editDate_Click"/>
+        />
 
     <Spinner
         android:layout_width="match_parent"
@@ -73,14 +72,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <ListView
-        android:layout_below="@id/editDescription"
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listVievFixings"/>
-
-
     <Button
         style="@style/buttonStyle"
         android:layout_width="wrap_content"
@@ -93,6 +84,17 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:onClick="submitButton_Click"/>
+
+    <ListView
+        android:layout_below="@id/editDescription"
+        android:layout_above="@id/submitButton"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listVievFixings"/>
+
+
+
 
 
 
