--- a/app/src/main/res/layout/control_budget_activity.xml
+++ b/app/src/main/res/layout/control_budget_activity.xml
@@ -6,7 +6,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Balance"
+        android:text="@string/Not_selected_wallet"
         android:id="@+id/BalanceView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
