--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,6 +8,11 @@
         android:title="@string/general_settings"
         />
     <item
+        android:id="@+id/main_activity_intent"
+        android:orderInCategory="100"
+        android:title="@string/main_activity"
+        />
+    <item
         android:id="@+id/pouchs_settings"
         android:orderInCategory="100"
         android:title="@string/pouch_settings"
