--- a/app/src/main/res/layout/item_valuta_listview.xml
+++ b/app/src/main/res/layout/item_valuta_listview.xml
@@ -5,7 +5,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewValutaIcon"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -17,8 +17,8 @@
         android:text="valuta"
         android:id="@+id/nameValutaTextView"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imageView"
-        android:layout_toEndOf="@+id/imageView" />
+        android:layout_toRightOf="@+id/imageViewValutaIcon"
+        android:layout_toEndOf="@+id/imageViewValutaIcon" />
 
     <TextView
         android:layout_width="wrap_content"
