added small changes 21.02.2016

--- a/app/src/main/res/layout/statistics_budget_activity.xml
+++ b/app/src/main/res/layout/statistics_budget_activity.xml
@@ -27,7 +27,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
 
-        android:spinnersShown="false"/>
+        android:spinnersShown="false"
+        android:calendarViewShown="true"/>
 
     <DatePicker
         android:layout_width="wrap_content"
@@ -37,7 +38,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
 
-        android:spinnersShown="false"/>
+        android:spinnersShown="false"
+        android:calendarViewShown="true"/>
 
     <Button
         style="@style/buttonStyle"
