--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/fone_gradient"
-    tools:context="ru.stupnikov.application.controller.MainActivity">
+    tools:context="ru.stupnikov.application.activity.MainActivity">
 
 
 
