--- a/app/src/main/res/menu/menu_budget_control.xml
+++ b/app/src/main/res/menu/menu_budget_control.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ru.stupnikov.application.controller.ContolBudgetActivity">
+    tools:context="ru.stupnikov.application.activity.ContolBudgetActivity">
 <item
     android:id="@+id/editArcticle"
     android:orderInCategory="100"
