added small changes for TestActivity

--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -12,30 +12,28 @@
         android:layout_alignParentStart="true" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
+        android:text="Запиать в БД по номеру"
+        android:id="@+id/writeButton"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="addWallettoDB"/>
+        android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button2"
-        android:layout_above="@+id/button"
-        android:layout_centerHorizontal="true"
-        android:onClick="readDB"/>
+        android:text="Считать БД"
+        android:id="@+id/readButton"
+        android:layout_above="@+id/writeButton"
+        android:layout_centerHorizontal="true" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="numberSigned"
         android:ems="10"
         android:id="@+id/numerEditText"
-        android:layout_above="@+id/button2"
+        android:layout_above="@+id/readButton"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
