added small changes for menu_main

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -26,4 +26,7 @@
         android:id="@+id/controlBudgetActivityIntent"
         android:orderInCategory="100"
         android:title="Контроль бюджета" />
+    <item android:id="@+id/testActivityIntent"
+        android:orderInCategory="100"
+        android:title="testActivity" />
 </menu>
